# python-otel-sdk

./: .env.example  .gitignore  AGENTS.md  README.md  config.toml  main.py  pyproject.toml  skills-lock.json
.agents/skills/pydantic/: README.md
.github/workflows/: python-publish.yml
model/: configuration.py
moduna/: __init__.py
moduna/sdk/: __init__.py  tracing.py
moduna_otel/: __init__.py  types.py
moduna_otel/services/: __init__.py  langchain_attributes.py  langchain_registration.py  langchain_runs.py  langchain_usage.py  langchain_utils.py  moduna_langchain_callback_handler.py  moduna_otel.py  otel_config.py  otel_exporter.py  otel_instrumentation.py
services/: __init__.py  agent_cli.py  base_agent_service.py  configuration_service.py  moduna_service.py
services/bfsi/: __init__.py  agent_service.py
services/customer_support/: __init__.py  agent_service.py
services/it_service/: __init__.py  agent_service.py
tests/: __init__.py  conftest.py  smoke_test.py  test_configuration_service.py  test_langchain_callback_handler.py  test_langchain_google_integration.py  test_moduna_otel.py  test_moduna_public_api.py
tools/: __init__.py
tools/bfsi/: __init__.py  registry.py  schemas.py
tools/customer_support/: __init__.py  registry.py  schemas.py
tools/it_service/: __init__.py  registry.py  schemas.py
util/: __init__.py  config.py  env.py
