[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "moduna"
version = "0.1.5"
description = "Python OpenTelemetry helpers for Moduna AI traces."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Moduna" },
]
dependencies = [
  "opentelemetry-api>=1.25.0",
  "opentelemetry-sdk>=1.25.0",
  "opentelemetry-exporter-otlp-proto-http>=1.25.0",
]

[project.optional-dependencies]
langchain = [
  "langchain-core>=0.2.0",
]
dev = [
  "basedpyright>=1.39.6",
  "build>=1.2.0",
  "langchain-google-genai>=4.0.0",
  "python-dotenv>=1.0.0",
  "pytest>=8.0.0",
  "ruff>=0.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["moduna_otel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
  "B",
  "C4",
  "D",
  "E",
  "F",
  "I",
  "N",
  "PT",
  "RUF",
  "SIM",
  "UP",
  "W",
]
ignore = [
  "D105",
  "D107",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D100", "D101", "D102", "D103"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.basedpyright]
typeCheckingMode = "standard"
include = ["moduna_otel"]
