[project]
name = "moduna"
version = "0.1.9"
description = "Moduna Python SDK for tracing AI agent frameworks with Traceloop."
readme = "README.md"
license = "MIT"
authors = [{ name = "Moduna" }]
keywords = ["ai", "agents", "langchain", "crewai", "observability", "tracing"]
requires-python = ">=3.13,<3.14"
dependencies = [
    "langchain>=1.3.4",
    "langchain-core>=1.4.0",
    "langchain-google-genai>=4.2.4",
    "opentelemetry-instrumentation-crewai>=0.61.0",
    "opentelemetry-instrumentation-langchain>=0.61.0",
    "pydantic>=2.13.4",
    "traceloop-sdk>=0.61.0",
]

[project.optional-dependencies]
crewai = ["opentelemetry-instrumentation-crewai>=0.61.0"]
langchain = [
    "langchain>=1.3.4",
    "langchain-core>=1.4.0",
    "langchain-google-genai>=4.2.4",
    "opentelemetry-instrumentation-langchain>=0.61.0",
]

[project.scripts]
moduna-agent = "services.agent_cli:main"

[dependency-groups]
dev = ["pytest>=9.0.2", "ruff>=0.15.16"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["moduna", "model", "services", "tools", "util"]

[tool.hatch.build.targets.wheel.force-include]
"config.toml" = "config.toml"

[tool.ruff]
line-length = 80
target-version = "py313"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
